<resources>
    <string name="app_name">BabyMonitor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="watch_live">Watch live</string>
    <string name="title_activity_stream">Stream</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_short">Settings</string>
    <string name="monitor_settings">Monitor settings</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="live_data">Live data</string>
    <string name="see_reports">See reports</string>
    <string name="heart_rate">Heart rate : %1$s bpm</string>
    <string name="oxygen">Oxygen : %1$s</string>
    <string name="weight">Last weight : %1$s kg</string>
    <string name="temperature">Temperature : %1$s\u2103</string>
    <string name="humidity">Humidity : %1$s%%</string>
    <string name="co2">CO2: %1$s</string>
    <string name="nox">NOx: %1$s</string>
    <string name="nh3">NH3: %1$s</string>
    <string name="notification_default_channel_id">1</string>
</resources>